user can now click to outside of menu on mobiles to close it, status button responsiveness, console index key for cards error fix

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     font-family: "Nunito Sans", sans-serif;
     font-optical-sizing: auto;
